cleanup old code

--- a/akva.html
+++ b/akva.html
@@ -1,41 +1,100 @@
+<!doctype html>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Szarvas Pongrác akvarellkép gyűjteménye"
+    />
+    <meta name="author" content="Szarvas Pongrác" />
+    <title>Akvarellek - Szarvas Pongrác</title>
+    <link rel="stylesheet" type="text/css" href="tartalom.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <p class="lapcim">Akvarellek</p>
+      <br /><br style="font-size: 40px" />
 
-<html>
-<head><link rel=stylesheet type=text/css href="tartalom.css"></head>
-<body>
+      <table style="border-spacing: 10px">
+        <!-- First row with 5 images -->
+        <tr>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva01.jpg"
+              style="height: 230px"
+              alt="Akvarell 1"
+            />
+          </td>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva02.jpg"
+              style="height: 230px"
+              alt="Akvarell 2"
+            />
+          </td>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva03.jpg"
+              style="height: 230px"
+              alt="Akvarell 3"
+            />
+          </td>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva11.jpg"
+              style="height: 230px"
+              alt="Akvarell 11"
+            />
+          </td>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva12.jpg"
+              style="height: 230px"
+              alt="Akvarell 12"
+            />
+          </td>
+        </tr>
 
-<center>
+        <!-- Second row with 3 images -->
+        <tr>
+          <td style="text-align: center">
+            <img
+              src="kepek/akva10.jpg"
+              style="width: 300px"
+              alt="Akvarell 10"
+            />
+          </td>
+          <td style="text-align: center">
+            <img src="kepek/akva08.jpg" style="width: 300px" alt="Akvarell 8" />
+          </td>
+          <td style="text-align: center">
+            <img src="kepek/akva04.jpg" style="width: 300px" alt="Akvarell 4" />
+          </td>
+        </tr>
 
-<p class="lapcim">Akvarellek
-<br /><br style="font-size:40">
-
-<table cellspacing="10">
-
-<tr><td colspan="3">
-<table cellspacing="0" cellpadding="0" width="100%"><tr>
-<td align=center><img src="kepek/akva01.jpg" height="230"><td width="10">
-<td align=center><img src="kepek/akva02.jpg" height="230"><td width="10">
-<td align=center><img src="kepek/akva03.jpg" height="230"><td width="10">
-<td align=center><img src="kepek/akva11.jpg" height="230"><td width="10">
-<td align=center><img src="kepek/akva12.jpg" height="230">
-</table>
-
-
-<tr>
-<td align=center><img src="kepek/akva10.jpg" width="300">
-<td align=center><img src="kepek/akva08.jpg" width="300">
-<td align=center><img src="kepek/akva04.jpg" width="300">
-
-<tr>
-<td align=center><img src="kepek/akva05.jpg" width="300">
-<td align=center><img src="kepek/akva06.jpg" width="300">
-<td align=center><img src="kepek/akva07.jpg" width="300">
-
-
-
-
-</table>
-
-</center>
-
-</body>
+        <!-- Third row with 3 images -->
+        <tr>
+          <td style="text-align: center">
+            <img src="kepek/akva05.jpg" style="width: 300px" alt="Akvarell 5" />
+          </td>
+          <td style="text-align: center">
+            <img src="kepek/akva06.jpg" style="width: 300px" alt="Akvarell 6" />
+          </td>
+          <td style="text-align: center">
+            <img src="kepek/akva07.jpg" style="width: 300px" alt="Akvarell 7" />
+          </td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
+
