--- a/eletrajz.html
+++ b/eletrajz.html
@@ -1,103 +1,191 @@
+<!doctype html>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Szarvas PongrÃ¡c Ã©letrajza - grafikus, festÅ‘, illusztrÃ¡tor"
+    />
+    <meta name="author" content="Szarvas PongrÃ¡c" />
+    <title>Ã‰letrajz - Szarvas PongrÃ¡c</title>
+    <link rel="stylesheet" type="text/css" href="tartalom.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <p class="lapcim">Ã‰letrajz <br /><br style="font-size: 20" /></p>
 
-<html>
-<head><link rel=stylesheet type=text/css href="tartalom.css"></head>
-<body>
+      <div style="width: 95%">
+        <p>
+          <img
+            src="szarvasp.jpg"
+            style="width: 200px"
+            style="margin: 0"
+            style="text-align: left"
+          />
+        </p>
 
-<center>
-<p class="lapcim">Életrajz
-<br><br style="font-size:20">
+        <p class="szoveg" style="text-indent: 0">
+          1961-ben szÃ¼letett BajÃ¡n, ma is ott Ã©l. FelesÃ©ge Vancsura Margit,
+          akivel hat gyereket nevelnek. A Gemenci ErdÅ‘- Ã©s VadgazdasÃ¡gnÃ¡l
+          dolgozik, ahol fÅ‘kÃ©nt idegenforgalommal foglalkozik, de sok Ã©ven Ã¡t
+          volt termÃ©szetvÃ©delmi Å‘r is. SzabadidejÃ©ben alkot, egyarÃ¡nt Ã©rdekli a
+          kÃ¶rnyezÅ‘ erdÅ‘k, vizek Ã©s a messzi tÃ¡jak Ã©lÅ‘vilÃ¡ga.
+        </p>
 
-<div style="width:95%">
+        <p class="lapcim" style="text-align: left" style="font-size: 16">
+          TanulmÃ¡nyok
+        </p>
 
-<p><img src="szarvasp.jpg" width="200"  hspace="0" vspace="0" align="left">
+        <p class="szoveg" style="text-indent: 0">
+          1981-84 kÃ©zÃ¡tt a budapesti dekoratÅ‘rkÃ©pzÃ© iskolÃ©ban tanult Ã©
+          kÃ©pzÅ‘mÅ±vÃ©sz tanÅ‘rai KÅ‘rolyi ErnÃ©, KÅ‘rolyi Zsigmond, Mester AndrÃ©s Ã©s
+          Tolvaly ErnÃ© voltak. Ekkor ismerkedett meg a vadÃ©sz kÅ‘rÃ©kben ismert
+          CsergezÃ©n PÃ©l Ã©s Muray RÃ©bert festÅ‘mÅ±vÃ©szekkel, CsekÃ© SÃ©ndorral, Dr.
+          ZoltÃ©n AttilÃ©val (a NimrÃ©d fÃ©szerkesztÃ©ivel) Ã©s BÃ©nyai JÃ©zsef
+          mÃ©zeulÃ©gussal, akik bÃ©ztatÃ©sÅ‘ra kezdett el Ã©llatÃ©brÃ©zolÃ©ssal
+          foglalkozni. ElsÃ© sikereit rajzaival, illusztrÃ©ciÃ©ival ekkor
+          kÃ©nyvelhette el.
+        </p>
 
-<p class="szoveg" style="text-indent:0">
-1961-ben született Baján, ma is ott él. Felesége Vancsura Margit, akivel hat gyereket nevelnek. A Gemenci Erdõ- és Vadgazdaságnál dolgozik, ahol fõként idegenforgalommal foglalkozik, de sok éven át volt természetvédelmi õr is. Szabadidejében alkot, egyaránt érdekli a környezõ erdõk, vizek és a messzi tájak élõvilága.
-</p>
+        <p class="lapcim" style="text-align: left" style="font-size: 16">
+          PublikÃ©ciÃ©k
+        </p>
 
-<p class="lapcim" align="left" style="font-size:16">Tanulmányok</p>
+        <p class="szoveg" style="text-indent: 0">
+          A NimrÃ©d, a DÃ©nes NatÅ‘r MÃ©hely Ã©s mÃ©s kiadÃ©k felkÅ‘rÃ©sÅ‘re tÃ©bb mint
+          hÃ©sz, jellemzÃ©en vadÃ©szati szÃ©p- Ã©s szakirodalmi mÃ©vet illusztrÃ©lt.
+          Rendszeres rÃ©sztvevÃ©je, alapÃ¡tÃ©ja a Gemenc Zrt. Ã©ltal szervezett
+          alkotÃ© tÃ©boroknak. TÃ©bb csoportos Ã©s egyÃ©ni kiÃ©llÃ¡tÃ©son vett rÃ©szt,
+          alkotÃ©sai fÅ‘kÃ©nt a termÃ©szetbarÃ¡tok, vadÃ©szok otthonÃ©ban lelhetÃ©k fel,
+          a kÃ©zgyÃ©jtemÃ©nyek kÃ©zÃ©l a Magyar MezÃ©gazdasÃ©gi MÃ©zeum Ã©s a
+          SzilvÃ©svÅ‘radi ErdÃ©szeti MÃ©zeum is Å‘rzi egy-egy kÃ©pÃ¡t. NÃ©hÃ©ny munkÃ©ja
+          AusztriÃ©ba, Belgiumba, NÃ©met-, Olasz-, Orosz-, SvÃ©d- Ã©s
+          SpanyolorszÃ©gba kerÃ©lt.
+        </p>
 
-<p class="szoveg" style="text-indent:0">
-1981-84 között a budapesti dekoratõrképzõ iskolában tanult – képzõmûvész tanárai Károlyi Ernõ, Károlyi Zsigmond, Mester András és Tolvaly Ernõ voltak. Ekkor ismerkedett meg a vadász körökben ismert Csergezán Pál és Muray Róbert festõmûvészekkel, Csekõ Sándorral, Dr. Zoltán Attilával (a Nimród fõszerkesztõivel) és Bányai József múzeulógussal, akik bíztatására kezdett el állatábrázolással foglalkozni. Elsõ sikereit rajzaival, illusztrációival ekkor könyvelhette el.
-</p>
+        <p class="lapcim" style="text-align: left" style="font-size: 16">
+          ElismerÃ©sek
+        </p>
 
-<p class="lapcim" align="left" style="font-size:16">Publikációk</p>
+        <p class="szoveg" style="text-indent: 0">
+          1997-ben az V. OrszÃ©gos VadÃ©szati- HalÃ©szati Ã©s TermÃ©szetvÃ©delmi
+          KiÃ©llÃ¡tÃ©son egy kÃ©pe kÃ©lÃ©ndÃ©jat nyert. 2005-ben az I. OrszÃ©gos
+          VadÃ©szfestÃ©szeti PÃ©lyÃ©zat Ã©s KiÃ©llÃ¡tÃ©sra kÃ©ldÃ¡tt alkotÃ©sÃ¡t oklevÃ©llel
+          jutalmaztÃ©k. 2008-ban Baja VÅ‘ros Ã©nkormÃ©nyzata idegenforgalmi Ã©s
+          termÃ©szetvÃ©delmi tevÃ©kenysÃ©gÃ©Å‘rt "Baja VÅ‘ros FejlesztÃ©sÃ©Å‘rt" kitÃ©ntetÃ©
+          dÃ©jban rÃ©szesÃ¡tette.
+        </p>
+      </div>
 
-<p class="szoveg" style="text-indent:0">
-A Nimród, a Dénes Natúr Mûhely és más kiadók felkérésére több mint húsz, jellemzõen vadászati szép- és szakirodalmi mûvet illusztrált. Rendszeres résztvevõje, alapítója a Gemenc Zrt. által szervezett alkotó táboroknak. Több csoportos és egyéni kiállításon vett részt, alkotásai fõként a természetbarátok, vadászok otthonában lelhetõk fel, a közgyûjtemények közül a Magyar Mezõgazdasági Múzeum és a Szilvásváradi Erdészeti Múzeum is õrzi egy-egy képét. Néhány munkája Ausztriába, Belgiumba, Német-, Olasz-, Orosz-, Svéd- és Spanyolországba került.
-</p>
-
-<p class="lapcim" align="left" style="font-size:16">Elismerések</p>
-
-<p class="szoveg" style="text-indent:0">
-1997-ben az V. Országos Vadászati- Halászati és Természetvédelmi Kiállításon egy képe különdíjat nyert. 2005-ben az I. Országos Vadászfestészeti Pályázat és Kiállításra küldött alkotását oklevéllel jutalmazták. 2008-ban Baja Város Önkormányzata idegenforgalmi és természetvédelmi tevékenységéért "Baja Város Fejlesztéséért" kitüntetõ díjban részesítette.
-</p>
-
-</div>
-
-<!--
+      <!--
 <p class="szoveg">
-1961-ben született Baján, ma is ott él. Felesége Vancsura Margit óvodapedagógus, hat gyermeket nevelnek. Gyermekkorától fogva járja a Duna menti erdõket. 1997 óta Gemenc Zrt. pörbölyi Ökoturisztikai Központjában az ártéri gazdálkodás nyomán kialakult, ill. megõrzött természeti értékekkel igyekszik megismertetni a Gemenci erdõbe látogató turistákat, erdei iskolásokat. Korábban természetvédelmi õrként is ezt tette. Szabadidejében szívesen fog ceruzát, ecsetet, fényképezõgépet a kezébe. A természeti-vadászati hagyományokat ápolva, képein fõként az ártéri táj hangulatát igyekszik megragadni, állatvilágát hitelesen bemutatni.
+1961-ben szÃ¼letett BajÃ¡n, ma is ott Ã©l. FelesÃ©ge Vancsura Margit Ã©vodapedagÃ©gus, hat gyermeket nevelnek. GyermekkorÃ¡tÃ©l fogva jÅ‘rja a Duna menti erdÅ‘ket. 1997 Ã¡ta Gemenc Zrt. pÅ‘rbÃ©lyi Ã©koturisztikai KÃ©zpontjÃ©ban az Å‘rtÅ‘ri gazdÃ©lkodÃ©s nyomÃ©n kialakult, ill. megÅ‘rzÃ¡tt termÃ©szeti Å‘rtÃ©kekkel igyekszik megismertetni a Gemenci erdÃ©be lÃ¡togatÃ© turistÃ©kat, erdei iskolÃ©sokat. KorÃ©bban termÃ©szetvÃ©delmi Å‘rkÃ©nt is ezt tette. SzabadidejÃ©ben szÃ©vesen fog ceruzÃ¡t, ecsetet, fÃ©nykÃ©pezÃ©gÃ©pet a kezÃ©be. A termÃ©szeti-vadÃ©szati hagyomÃ©nyokat Ã©polva, kÃ©pein fÅ‘kÃ©nt az Å‘rtÅ‘ri tÃ©j hangulatÃ¡t igyekszik megragadni, Ã©llatvilÃ©gÃ¡t hitelesen bemutatni.
 </p>
 <p class="szoveg">
-Vízügyi szakközépiskolai érettségi után dekoratõr képesítést szerzett. 1982 óta alkot rendszeresen. Eleinte az alkalmazott grafika területén dolgozott, de vadászati tárgyú karikatúrákat, illusztrációkat, fotómontázsokat is készített, melyek a Mai Magazinban és a Nimródban jelentek meg. A fõvárosban folytatott tanulmányai idején képzõmûvész tanárai, az akkori, a Csekõ Sándor szerkesztette Nimródot is illusztráló Csergezán Pál festõmûvész és Nagygyörgy Sándor fotómûvész, valamint Bányai József a Magyar Mezõgazdasági Múzeum múzeológusának bíztatására fordult a képzõmûvészet felé. Elsõ sikerét 1988-ban Budapesten könyvelhette el a Kongresszusi Központban rendezett vadászati tárgyú kiállításon és aukción.
+VÃ©zÃ©gyi szakkÃ©zÃ©piskolai Å‘rettsÃ©gi utÃ©n dekoratÅ‘r kÃ©pesÃ¡tÃ©st szerzett. 1982 Ã¡ta alkot rendszeresen. Eleinte az alkalmazott grafika terÃ©letÃ©n dolgozott, de vadÃ©szati tÅ‘rgyÃ© karikatÅ‘rÃ©kat, illusztrÃ©ciÃ©kat, fotÃ©montÃ©zsokat is kÃ©szÃ¡tett, melyek a Mai Magazinban Ã©s a NimrÃ©dban jelentek meg. A fÃ©vÅ‘rosban folytatott tanulmÃ©nyai idejÃ©n kÃ©pzÅ‘mÅ±vÃ©sz tanÅ‘rai, az akkori, a CsekÃ© SÃ©ndor szerkesztette NimrÃ©dot is illusztrÃ©lÃ© CsergezÃ©n PÃ©l festÅ‘mÅ±vÃ©sz Ã©s NagygyÅ‘rgy SÃ©ndor fotÃ©mÅ±vÃ©sz, valamint BÃ©nyai JÃ©zsef a Magyar MezÃ©gazdasÃ©gi MÃ©zeum mÃ©zeolÃ©gusÃ©nak bÃ©ztatÃ©sÅ‘ra fordult a kÃ©pzÅ‘mÅ±vÃ©szet felÃ©. ElsÃ© sikerÃ¡t 1988-ban Budapesten kÃ©nyvelhette el a Kongresszusi KÃ©zpontban rendezett vadÃ©szati tÅ‘rgyÃ© kiÃ©llÃ¡tÃ©son Ã©s aukciÃ©n.
 </p>
 <p class="szoveg">
-1997-tõl tagja a természethez kötõdõ képzõ- és iparmûvészek körének, az Altamira Egyesületnek. Kezdetben ceruzával, tussal, akvarellel, pasztellel dolgozott, de Muray Róbert festõmûvész unszolására 1999 óta olajfestékkel is készít képeket. A Dénes Natúr Mûhely vezetõje Dénes István, a Zoltán Attila szerkesztette Nimród és más kiadók felkérésére vadászati, természetvédelmi szak- és szépirodalmi könyvek, folyóiratok illusztrálásával is foglalkozik. Dusanek János festõmûvész és Kalotás Zsolt fotómûvész bátorítására a természetfotózást sem hagyta abba, fotói turisztikai kiadványokban is megjelentek. A Dél-Dunántúlon és a Dél-Alföldön több tanösvény tájékoztató tábláin is szerepelnek rajzai. Rendszeres meghívott résztvevõje a gemenci alkotótáboroknak.
+1997-tÃ©l tagja a termÃ©szethez kÃ¡tÃ©dÃ© kÃ©pzÃ©- Ã©s iparmÅ±vÃ©szek kÅ‘rÃ©nek, az Altamira EgyesÃ©letnek. Kezdetben ceruzÃ©val, tussal, akvarellel, pasztellel dolgozott, de Muray RÃ©bert festÅ‘mÅ±vÃ©sz unszolÃ©sÅ‘ra 1999 Ã¡ta olajfestÃ©kkel is kÃ©szÃ¡t kÃ©peket. A DÃ©nes NatÅ‘r MÃ©hely vezetÃ©je DÃ©nes IstvÃ©n, a ZoltÃ©n Attila szerkesztette NimrÃ©d Ã©s mÃ©s kiadÃ©k felkÅ‘rÃ©sÅ‘re vadÃ©szati, termÃ©szetvÃ©delmi szak- Ã©s szÃ©pirodalmi kÃ©nyvek, folyÃ©iratok illusztrÃ©lÃ©sÃ©val is foglalkozik. Dusanek JÃ©nos festÅ‘mÅ±vÃ©sz Ã©s KalotÃ©s Zsolt fotÃ©mÅ±vÃ©sz bÃ¡torÃ¡tÃ©sÅ‘ra a termÃ©szetfotÃ©zÃ©st sem hagyta abba, fotÃ©i turisztikai kiadvÃ©nyokban is megjelentek. A DÃ©l-DunÃ©ntÃ©lon Ã©s a DÃ©l-AlfÃ©ldÃ©n tÃ©bb tanÃ©svÃ©ny tÃ©jÃ©koztatÃ© tÃ©blÃ©in is szerepelnek rajzai. Rendszeres meghÃ©vott rÃ©sztvevÃ©je a gemenci alkotÃ¡tÃ©boroknak.
 </p>
 <p class="szoveg">
-1997-ben az V. Országos Vadászati- Halászati és Természetvédelmi Kiállításon egy képe különdíjat nyert. Más munkáját 2005-ben az I. Országos Vadászfestészeti Pályázat és Kiállítás résztvevõjeként oklevéllel jutalmazták. 2008-ban Baja Város Önkormányzata "Baja Város Fejlesztéséért" kitüntetõ díjban részesítette.
+1997-ben az V. OrszÃ©gos VadÃ©szati- HalÃ©szati Ã©s TermÃ©szetvÃ©delmi KiÃ©llÃ¡tÃ©son egy kÃ©pe kÃ©lÃ©ndÃ©jat nyert. MÃ©s munkÃ©jÃ¡t 2005-ben az I. OrszÃ©gos VadÃ©szfestÃ©szeti PÃ©lyÃ©zat Ã©s KiÃ©llÃ¡tÃ©s rÃ©sztvevÃ©jekÃ©nt oklevÃ©llel jutalmaztÃ©k. 2008-ban Baja VÅ‘ros Ã©nkormÃ©nyzata "Baja VÅ‘ros FejlesztÃ©sÃ©Å‘rt" kitÃ©ntetÃ© dÃ©jban rÃ©szesÃ¡tette.
 </p>
 <p class="szoveg">
-Önálló és csoportos kiállításainak száma hatvan fölött jár. Fõbb helyszínek: Budapest, Baja, Bátaszék, Bonyhád, Deszk, Hódmezõvásárhely, Kecskemét, Kaposvár, Komló, Õriszentpéter, Sopron, Szekszárd, Székesfehérvár, Tata. Képeit természetbarátok otthonában, vadászházakban, erdészeti irodákban, a Magyar Mezõgazdasági Múzeumban, a Szilvásváradi Erdészeti Múzeumban is megtalálni. Rajzai, festményei eljutottak Ausztriába, Belgiumba, Németországba, Olaszországba, Oroszországba, Svédországba is.
+Ã©nÃ©llÃ© Ã©s csoportos kiÃ©llÃ¡tÃ©sainak szÃ©ma hatvan fÃ©lÃ¡tt jÅ‘r. FÃ©bb helyszÃ©nek: Budapest, Baja, BÃ¡taszÃ©k, BonyhÃ©d, Deszk, HÃ©dmezÃ©vÃ©sÅ‘rhely, KecskemÃ¡t, KaposvÅ‘r, KomlÃ©, Å‘riszentpÃ¡ter, Sopron, SzekszÅ‘rd, SzÃ©kesfehÅ‘rvÅ‘r, Tata. KÃ©peit termÃ©szetbarÃ¡tok otthonÃ©ban, vadÃ©szhÃ©zakban, erdÃ©szeti irodÃ©kban, a Magyar MezÃ©gazdasÃ©gi MÃ©zeumban, a SzilvÃ©svÅ‘radi ErdÃ©szeti MÃ©zeumban is megtalÃ©lni. Rajzai, festmÃ©nyei eljutottak AusztriÃ©ba, Belgiumba, NÃ©metorszÃ©gba, OlaszorszÃ©gba, OroszorszÃ©gba, SvÃ©dorszÃ©gba is.
 </p>
 -->
 
+      <br /><br style="font-size: 20" />
+      <p class="lapcim">KÃ©nyvillusztrÃ©ciÃ©k Ã©s egyÃ©b kiadvÃ©nyok</p>
+    </div>
 
-
-
-<br><br style="font-size:20">
-<p class="lapcim">Könyvillusztrációk és egyéb kiadványok
-</center>
-
-<div style="padding-left:50">
-<ul class="szoveg" type="square">
-
-<li>Sterbetz István: Húzáson vadászható madaraink (Nimród Vadászakadémia 9.- 2001.) 
-<li>Páll Endre: A vaddisznó (Nimród Vadászakadémia 8.- 2001.) 
-<li>Dr. Elán Károly: Elsõsegély a természetben (Nimród Vadászakadémia 7.- 2001.) 
-<li>Fatalin Gyula: A magyar gímszarvas (Nimród Vadászakadémia 5.- 2000.) 
-<li>Plavecz János: A vadászat gyakorlata (Nimród Vadászakadémia 3.- 2000.) 
-<li>Dr. Kõhalmy Tamás: Korbecslés szarvastól a siketfajdig (Nimród Vadászakadémia 2.- 1999.) 
-<li>Sipos György: Trófeák elõkészítése preparáláshoz (Nimród Vadászakadémia 1.-1998.) 
-<li>Földi László: Az orgonák völgyében (Móricz Zs. Színház, Nyíregyháza -1990.) 
-<li>Földi László: Vadregény (Dénes Natúr Mûhely Kiadó -1997.) 
-<li>Fáczányi Ödön: Vadászmagatartás (Nimród Kiadó -1999, 2002.) 
-<li>Videcz Ferenc: Holtomiglan (Dénes Natúr Mûhely Kiadó -1997.) 
-<li>Videcz Ferenc: Verõfény és alkonyat (D.N.M. Kiadó -1998.) 
-<li>Videcz Ferenc: Vadász voltam egykoron (D.N.M. Kiadó -1999.) 
-<li>Videcz Ferenc: Tanítványok (D.N.M. Kiadó -2001.) 
-<li>Videcz Ferenc: Vendégkönyv (D.N.M. Kiadó -2004.) 
-<li>Videcz Ferenc: Zsugorított görbetükör (Terraprint Kiadó -2004.) 
-<li>Böröczky Kornél: Gemenctõl Gemencig (D.N.M. Kiadó -1999.) 
-<li>Vendégváró Útikönyvek: Látnivalók Magyarországon (Well-Press Kiadó -2000.) 
-<li>Millenniumi Vadászati Almanach: Tolna megye (OMVK Tolna m. szervezete -2001.) 
-<li>Millenniumi Vadászati Almanach: Komárom - Esztergom megye (D.N.M.  Kiadó -2001.) 
-<li>Millenniumi Vadászati Almanach: Bács-Kiskun megye (Bács - Kk. m. Vadászszövetség -2001.) 
-<li>Millenniumi Vadászati Almanach: Pest megye (D.N.M. Kiadó -2001.) 
-<li>Millenniumi Vadászati Almanach: Magyarország (D.N.M. Kiadó -2001.) 
-<li>Anti István: A dámszarvas (Nimród Vadászakadémia 10.-2002.) 
-<li>Dr. Zoltán János: A vadászat napszámosai (D.N.M. Kiadó -2001.) 
-<li>DDNP. Gemenci turista térkép (DDNP. Ig -2001.) 
-<li>DDNP. Béda-Karapancsai turista térkép (DDNP. Ig -2001.) 
-<li>Duna- Dráva Nemzeti Park turista térkép (Paulus -2002.) 
-<li>DDNP. Béda-Karapancsai tájegység és a Kopácsi-rét turistatérképe (Paulus -2004, 2008.) 
-<li>NIMRÓD Vadászújság, Magyar Vadászlap, Természet BÚVÁR- c. lap egyes számai
-<li>Fáczányi Ödön, Nimród Vadászújság: Fejet hajtunk (Országos Magyar Vadászkamara 2008.)
-
-</ul>
-
-</div>
-
-</body>
+    <div style="padding-left: 50">
+      <ul class="szoveg" type="square">
+        <li>
+          Sterbetz IstvÃ©n: HÃ©zÃ©son vadÃ©szhatÃ© madaraink (NimrÃ©d VadÃ©szakadÃ©mia
+          9.- 2001.)
+        </li>
+        <li>PÃ©ll Endre: A vaddisznÃ© (NimrÃ©d VadÃ©szakadÃ©mia 8.- 2001.)</li>
+        <li>
+          Dr. ElÃ©n KÅ‘roly: ElsÃ©segÃ©ly a termÃ©szetben (NimrÃ©d VadÃ©szakadÃ©mia 7.-
+          2001.)
+        </li>
+        <li>
+          Fatalin Gyula: A magyar gÃ©mszarvas (NimrÃ©d VadÃ©szakadÃ©mia 5.- 2000.)
+        </li>
+        <li>
+          Plavecz JÃ©nos: A vadÃ©szat gyakorlata (NimrÃ©d VadÃ©szakadÃ©mia 3.- 2000.)
+        </li>
+        <li>
+          Dr. KÃ©halmy TamÃ©s: KorbecslÃ©s szarvastÃ©l a siketfajdig (NimrÃ©d
+          VadÃ©szakadÃ©mia 2.- 1999.)
+        </li>
+        <li>
+          Sipos GyÅ‘rgy: TrÃ©feÃ©k elÃ©kÃ©szÃ¡tÃ©se preparÃ©lÃ©shoz (NimrÃ©d
+          VadÃ©szakadÃ©mia 1.-1998.)
+        </li>
+        <li>
+          FÃ©ldi LÃ©szlÃ©: Az orgonÃ©k vÃ©lgyÃ©ben (MÅ‘ricz Zs. SzÃ©nhÃ©z, NyÅ‘regyhÃ©za
+          -1990.)
+        </li>
+        <li>FÃ©ldi LÃ©szlÃ©: VadregÃ©ny (DÃ©nes NatÅ‘r MÃ©hely KiadÃ© -1997.)</li>
+        <li>FÃ©czÃ©nyi Ã©dÃ©n: VadÃ©szmagatartÃ©s (NimrÃ©d KiadÃ© -1999, 2002.)</li>
+        <li>Videcz Ferenc: Holtomiglan (DÃ©nes NatÅ‘r MÃ©hely KiadÃ© -1997.)</li>
+        <li>Videcz Ferenc: VerÃ©fÃ©ny Ã©s alkonyat (D.N.M. KiadÃ© -1998.)</li>
+        <li>Videcz Ferenc: VadÃ©sz voltam egykoron (D.N.M. KiadÃ© -1999.)</li>
+        <li>Videcz Ferenc: TanÃ¡tvÃ©nyok (D.N.M. KiadÃ© -2001.)</li>
+        <li>Videcz Ferenc: VendÃ©gkÃ©nyv (D.N.M. KiadÃ© -2004.)</li>
+        <li>Videcz Ferenc: ZsugorÃ¡tott gÅ‘rbetÃ©kÅ‘r (Terraprint KiadÃ© -2004.)</li>
+        <li>BÅ‘rÃ©czky KornÃ©l: GemenctÃ©l Gemencig (D.N.M. KiadÃ© -1999.)</li>
+        <li>
+          VendÃ©gvÅ‘rÃ© Ã¡tikÃ©nyvek: LÃ¡tnivalÃ©k MagyarorszÃ©gon (Well-Press KiadÃ©
+          -2000.)
+        </li>
+        <li>
+          Millenniumi VadÃ©szati Almanach: Tolna megye (OMVK Tolna m. szervezete
+          -2001.)
+        </li>
+        <li>
+          Millenniumi VadÃ©szati Almanach: KomÅ‘rom - Esztergom megye (D.N.M.
+          KiadÃ© -2001.)
+        </li>
+        <li>
+          Millenniumi VadÃ©szati Almanach: BÃ©cs-Kiskun megye (BÃ©cs - Kk. m.
+          VadÃ©szszÃ©vetsÃ©g -2001.)
+        </li>
+        <li>
+          Millenniumi VadÃ©szati Almanach: Pest megye (D.N.M. KiadÃ© -2001.)
+        </li>
+        <li>
+          Millenniumi VadÃ©szati Almanach: MagyarorszÃ©g (D.N.M. KiadÃ© -2001.)
+        </li>
+        <li>Anti IstvÃ©n: A dÃ©mszarvas (NimrÃ©d VadÃ©szakadÃ©mia 10.-2002.)</li>
+        <li>Dr. ZoltÃ©n JÃ©nos: A vadÃ©szat napszÃ©mosai (D.N.M. KiadÃ© -2001.)</li>
+        <li>DDNP. Gemenci turista tÅ‘rkÃ©p (DDNP. Ig -2001.)</li>
+        <li>DDNP. BÃ©da-Karapancsai turista tÅ‘rkÃ©p (DDNP. Ig -2001.)</li>
+        <li>Duna- DrÃ©va Nemzeti Park turista tÅ‘rkÃ©p (Paulus -2002.)</li>
+        <li>
+          DDNP. BÃ©da-Karapancsai tÃ©jegysÃ©g Ã©s a KopÃ©csi-rÃ¡t turistatÅ‘rkÃ©pe
+          (Paulus -2004, 2008.)
+        </li>
+        <li>
+          NIMRÃ©D VadÃ©szÃ©jsÃ©g, Magyar VadÃ©szlap, TermÃ©szet BÃ©VÃ©R- c. lap egyes
+          szÃ©mai
+        </li>
+        <li>
+          FÃ©czÃ©nyi Ã©dÃ©n, NimrÃ©d VadÃ©szÃ©jsÃ©g: Fejet hajtunk (OrszÃ©gos Magyar
+          VadÃ©szkamara 2008.)
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
