--- a/index.html
+++ b/index.html
@@ -1,97 +1,148 @@
+<!doctype html>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Szarvas Pongr√°c grafikus, fest≈ë, illusztr√°tor honlapja. K√©pz≈ëm≈±v√©szeti alkot√°sok, vad√°szati t√©m√°j√∫ festm√©nyek √©s illusztr√°ci√≥k."
+    />
+    <meta
+      name="keywords"
+      content="Szarvas Pongr√°c, grafikus, fest≈ë, illusztr√°tor, vad√°szat, term√©szet, Baja"
+    />
+    <meta name="author" content="Szarvas Pongr√°c" />
+    <link rel="stylesheet" type="text/css" href="stilus.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <title>Szarvas Pongr√°c honlapja</title>
+  </head>
 
-<html>
-<head>
-<!-- <meta charset="iso-8859-2" /> -->
-<meta charset="UTF-8">
-<link rel=stylesheet type=text/css href="stilus.css">
-</head>
-<title>Szarvas Pongr·c honlapja</title>
-<body LEFTMARGIN="0" TOPMARGIN="0" MARGINWIDTH="0" MARGINHEIGHT="0" background="ferde.bmp">
-<center>
-<table height=100% border=0 cellspacing=0 cellpadding=0>
+  <body
+    style="margin: 0; padding: 0; background-image: url(&quot;ferde.bmp&quot;)"
+  >
+    <div style="display: flex; justify-content: center">
+      <table
+        style="
+          height: 100%;
+          border: 0;
+          border-spacing: 0;
+          border-collapse: collapse;
+        "
+      >
+        <tr>
+          <td
+            style="
+              height: 100px;
+              width: 1300px;
+              background-image: url(&quot;lececske.jpg&quot;);
+            "
+          >
+            <table style="width: 100%">
+              <tr>
+                <td>
+                  <a href="nyitolap.html" target="valtozo">
+                    <div>
+                      <span class="cim">Szarvas Pongr√°c</span><br />
+                      <span class="halovany"
+                        >grafikus, fest≈ë, illusztr√°tor</span
+                      >
+                    </div>
+                  </a>
+                </td>
+                <td style="text-align: right">
+                  <span class="megn">C√≠m:</span
+                  ><span class="sarok"> H-6500 Baja, S√°rretel≈ë u. 1.</span
+                  ><br />
+                  <span class="megn">Mobil:</span
+                  ><span class="sarok"> 30-819-2282</span><br />
+                  <table style="border-spacing: 0; border-collapse: collapse">
+                    <tr>
+                      <td style="height: 3px"></td>
+                    </tr>
+                    <tr>
+                      <td><span class="megn">E-mail:</span></td>
+                      <td style="width: 5px"></td>
+                      <td>
+                        <a href="mailto:szarvas@gemenc.hu"
+                          ><img src="drot.ico" style="border: 0"
+                        /></a>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
 
-<tr>
+        <tr>
+          <td style="background-color: black">
+            <table class="menu" style="width: 100%">
+              <tr>
+                <td>
+                  <a href="eletrajz.html" target="valtozo">√âletrajz</a>
+                  <img src="separ.jpg" style="height: 19px" />
+                  <a href="kmuveszet.html" target="valtozo">K√©pz≈ëm≈±v√©szet</a>
+                  <!--
+								<img src="separ.jpg" style="height: 19px;">
+								<a href="fotok.html" target="valtozo">Fot√≥k</a> 
+								<img src="separ.jpg" style="height: 19px;">
+								<a href="iterjesztes.html" target="valtozo">Ismeretterjeszt√©s</a> 
+								<img src="separ.jpg" style="height: 19px;">
+								<a href="csalad.html" target="valtozo">Csal√°d</a>
+								-->
+                </td>
+                <td style="text-align: right">
+                  <a
+                    href="http://www.forestpress.hu/hu/index.php"
+                    target="_blank"
+                    >Forestpress</a
+                  >
+                  <img src="separ.jpg" style="height: 19px" />
+                  <a href="http://www.vadaszat.net" target="_blank">Nimr√≥d</a>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
 
-<td height=100 width=1300 background="lececske.jpg">
+        <tr>
+          <td style="width: 820px; height: 100%">
+            <iframe
+              src="nyitolap.html"
+              name="valtozo"
+              style="height: 100%; width: 100%; border: 0"
+            ></iframe>
+          </td>
+        </tr>
 
-
-<table width=100%><tr>
-
-<td>
-
-<a href="nyitolap.html" target="valtozo">
-<div>
-
-<span class=cim>Szarvas Pongr·c</span><br>
-<span class=halovany>grafikus, festø, illusztr·tor</span>
-
-</div>
-</a>
-
-<td align=right>
-<span class=megn>CÌm:<span class=sarok> H-6500 Baja, Sz¸retelø u. 1.<br>
-<span class=megn>Mobil:<span class=sarok>  30-819-2282<br>
-<table cellspacing=0 cellpadding=0><tr><td height=3>
-<tr><td><span class=megn>E-mail:
-<td width=5><td><a href="mailto:szarvas@gemenc.hu"><img src="drot.ico" border=0></a></table>
-
-</table>
-
-
-<tr>
-
-<td bgcolor=black>
-<table class=menu width=100%><tr>
-<td>
-<a href="eletrajz.html" target="valtozo">…letrajz</a> <img src="separ.jpg" height=19>
-<a href="kmuveszet.html" target="valtozo">KÈpzøm˚vÈszet</a><!--<img src="separ.jpg" height=19>
-<a href="fotok.html" target="valtozo">FotÛk</a> <img src="separ.jpg" height=19>
-<a href="iterjesztes.html" target="valtozo">IsmeretterjesztÈs</a> <img src="separ.jpg" height=19>
-<a href="csalad.html" target="valtozo">Csal·d</a>
--->
-
-<td align=right>
-<a href="http://www.forestpress.hu/hu/index.php" target=blank>Forestpress</a> <img src="separ.jpg" height=19>
-<a href="http://www.vadaszat.net" target=blank>NimrÛd</a>
-</table>
-
-<tr>
-
-<td width=820 height=100%>
-
-
-<iframe src="nyitolap.html" name="valtozo" height=100% width=100% noresize frameborder=0></iframe>
-
-
-
-<tr>
-
-
-
-<td height=40 background="alja.jpg">
-
-<table class=alja width=100%>
-<tr>
-<td align=center>Az oldal ·talakÌt·s alatt!
-<!--
-
-<td>Baja, 2008.
-<td align=right>Aj·nlott felbont·s: 1024*768, 1280*1024
-
-<tr>
-<td>Arculat: Makaji M·tÈ
-<td align=right>Aj·nlott bˆngÈszø: Mozilla Firefox
-
--->
-
-</table>
-
-
-
-
-
-
-</table>
-</center>
-</body>
+        <tr>
+          <td style="height: 40px; background-image: url(&quot;alja.jpg&quot;)">
+            <table class="alja" style="width: 100%">
+              <tr>
+                <td
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  "
+                >
+                  Az oldal √°talak√≠t√°s alatt!
+                </td>
+                <!--
+							<td>Baja, 2008.</td>
+							<td style="text-align: right;">Aj√°nlott felbont√°s: 1024*768, 1280*1024</td>
+						</tr>
+						<tr>
+							<td>Arculat: Makaji M√°t√©</td>
+							<td style="text-align: right;">Aj√°nlott b√∂ng√©sz≈ë: Mozilla Firefox</td>
+							-->
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
+
