--- a/nyitolap.html
+++ b/nyitolap.html
@@ -1,13 +1,21 @@
-
-<html>
-<head><link rel=stylesheet type=text/css href="tartalom.css"></head>
-<body>
-
-<center>
-<table height=100% class=menu><tr><td valign=center>
-<img src="szarvasok.jpg" border=0 width=550>
-
-</center>
-
-</body>
+<!doctype html>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Szarvas Pongrác művészeti alkotásai" />
+    <meta name="author" content="Szarvas Pongrác" />
+    <title>Nyitólap - Szarvas Pongrác</title>
+    <link rel="stylesheet" type="text/css" href="tartalom.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div style="display: flex; justify-content: center">
+      <img
+        src="szarvasok.jpg"
+        style="border: 0; width: 550px"
+        alt="Szarvas család"
+      />
+    </div>
+  </body>
 </html>
