--- a/pasztell.html
+++ b/pasztell.html
@@ -1,45 +1,138 @@
+<!doctype html>
+<html lang="hu">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Szarvas Pongrác pasztellkép gyűjteménye"
+    />
+    <meta name="author" content="Szarvas Pongrác" />
+    <title>Pasztellek - Szarvas Pongrác</title>
+    <link rel="stylesheet" type="text/css" href="tartalom.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <p class="lapcim">Pasztellek <br /><br style="font-size: 40" /></p>
 
-<html>
-<head><link rel=stylesheet type=text/css href="tartalom.css"></head>
-<body>
+      <table cellspacing="15">
+        <tr>
+          <td
+            style="display: flex; justify-content: center; align-items: center"
+          >
+            <img src="kepek/pasztell01.jpg" style="width: 300px" />
+          </td>
+          <td
+            style="display: flex; justify-content: center; align-items: center"
+          >
+            <img src="kepek/pasztell02.jpg" style="width: 300px" />
+          </td>
+          <td>
+            <table style="border-spacing: 0" style="border: 0">
+              <tr>
+                <td
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  "
+                >
+                  <img src="kepek/pasztell03.jpg" style="width: 300px" />
+                </td>
+              </tr>
+              <tr>
+                <td><br style="font-size: 20" /></td>
+              </tr>
+              <tr>
+                <td
+                  style="
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                  "
+                >
+                  <img src="kepek/pasztell04.jpg" style="width: 300px" />
+                </td>
+              </tr>
+            </table>
 
-<center>
+            <tr>
+              <td
+                style="
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                "
+              >
+                <img src="kepek/pasztell05.jpg" style="width: 300px" />
+              </td>
+              <td
+                style="
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                "
+              >
+                <img src="kepek/pasztell06.jpg" style="width: 300px" />
+              </td>
+              <td
+                style="
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                "
+              >
+                <img src="kepek/pasztell08.jpg" style="width: 300px" />
 
-<p class="lapcim">Pasztellek
-<br><br style="font-size:40">
-
-
-<table cellspacing=15>
-
-<tr>
-<td align=center><img src="kepek/pasztell01.jpg" width=300>
-<td align=center><img src="kepek/pasztell02.jpg" width=300>
-<td><table cellspacing=0 border=0>
-	<tr><td align=center><img src="kepek/pasztell03.jpg" width=300></tr>
-	<tr><td><br style="font-size:20"></tr>
-	<tr><td align=center><img src="kepek/pasztell04.jpg" width=300></tr></table>
-
-<tr>
-<td align=center><img src="kepek/pasztell05.jpg" width=300>
-<td align=center><img src="kepek/pasztell06.jpg" width=300>
-<td align=center><img src="kepek/pasztell08.jpg" width=300>
-
-<tr>
-<td colspan="3">
-<table cellspacing=20 border=0 align=center>
-<tr>
-<td align=center><img src="kepek/pasztell09.jpg" width=300>
-<td align=center><img src="kepek/pasztell07.jpg" width=300>
-</tr>
-</table>
-</td>
-
-
-
-</table>
-
-
-</center>
-
-</body>
+                <tr>
+                  <td colspan="3">
+                    <table
+                      cellspacing="20"
+                      style="border: 0"
+                      style="text-align: center"
+                    >
+                      <tr>
+                        <td
+                          style="
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                          "
+                        >
+                          <img
+                            src="kepek/pasztell09.jpg"
+                            style="width: 300px"
+                          />
+                        </td>
+                        <td
+                          style="
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                          "
+                        >
+                          <img
+                            src="kepek/pasztell07.jpg"
+                            style="width: 300px"
+                          />
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </td>
+            </tr>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
